--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Pet Finder</title>
 </head>
 <body>
     <h1>Pet Finder</h1>
+    <ul id="pet-list"></ul> 
+    <div id="pets-container"></div>
     
     <script src="script.js"></script>
 </body>
